[package]
name = "silksong-autosplit-wasm"
version = "0.1.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asr = { git = "https://github.com/AlexKnauth/asr", branch = "Jujstme-mono-4-split-index", features = [
    "alloc", # Working with allocations.
    "derive", # Defining your own settings structs, converting endianness, and binding to .NET classes.
    # "flags", # Working with bit flags.
    # "float-vars", # Setting floating point variables.
    # "float-vars-small", # Setting floating point variables (small binary size).
    "integer-vars", # Setting integer variables.
    # "signature", # Scanning signatures.
    # "wasi-no-std", # Support for no_std on WASI.
    "unity", # Accessing games using the Unity engine.
    # "gba", # Accessing Game Boy Advance emulators.
    # "gcn", # Accessing GameCube emulators.
    # "genesis", # Accessing SEGA Genesis emulators.
    # "ps1", # Accessing PlayStation 1 emulators.
    # "ps2", # Accessing PlayStation 2 emulators.
    # "sms", # Accessing SEGA Master System / GameGear emulators.
    # "wii", # Accessing Wii emulators.
] }

# Bytemuck can be used to define structs that are being read from the game's process.
bytemuck = { version = "1", features = ["derive", "min_const_generics"] }
# Heap allocator
dlmalloc = { version = "0.2.4", features = ["global"] }

ugly_widget = { git = "https://github.com/AlexKnauth/hollowknight-autosplit-wasm", version = "0.1.0" }
ugly_widget_derive = { git = "https://github.com/AlexKnauth/hollowknight-autosplit-wasm", version = "0.1.0" }

[target.'cfg(not(target_os = "unknown"))'.dev-dependencies]
serde_json = { version = "1" }

[features]
unstable = ["asr/split-index"]

[lib]
crate-type = ["cdylib", "lib"]

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
# strip = true

[profile.release.build-override]
opt-level = 0
